# lindblad-bench

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  pytest.ini
.github/workflows/: ci.yml
analysis/: cache_math.py  compiler_flags.sh  cuda_sweep.sh  gen_figures.py  godbolt_links.md  make_jcp_assets.py  omp_scaling.sh  plot_speedup.py  roofline.py  summarize_cpu_batch.py  summarize_cuda_batch.py
analysis/asm/: lb_propagate_step_O3.s  lb_propagate_step_O3_native.s  lb_propagate_step_O3_native_fast.s  lb_propagate_step_scalar.s
benchmarks/: bench_batch.c  bench_cuda.c  bench_evolve.c  bench_expm.c  bench_grape.c  bench_propagate.c  compiler_results.csv  compiler_results_ryzen.csv  cpu_batch_results_intel.csv  cpu_batch_results_raw.csv  cpu_batch_results_raw_ryzen.csv  cpu_batch_results_ryzen.csv  cuda_batch_results_gtx1070ti.csv  cuda_batch_results_raw_gtx1070ti.csv  cuda_batch_results_raw_rtx4070.csv  cuda_batch_results_rtx4070.csv  pinning_i9_aux.csv  pinning_i9_aux_data.csv  qutip_grape_results_intel.csv  qutip_grape_results_ryzen.csv  qutip_results.csv  qutip_results_ryzen.csv
cuda/: propagate_batch_kernel.cu  propagate_batch_kernel.h  propagate_batch_wrapper.c
docs/: claim_audit.md  cpu_batch_scaling_results.md  cuda_batch_results.md  fpga_results.md  i9_pinning_note.md  jcp_agent_blueprint.md  literature_matrix.md  manuscript_voice_guide.md  qutip_grape_results.md
godbolt/: README.md
include/: lindblad_bench.h  lindblad_cuda.h
paper/: cover_letter_jcp.tex  main.bbl  main.tex  main_cpc.bbl  main_cpc.tex  main_jcp.bbl  main_jcp.tex  refs.bib
python/: lindblad_ext.c  pyproject.toml  setup.py  test_crossval.py
python/lindblad_bench/: __init__.py  validate.py
reference/: grape_reference.py  reference.py  requirements.txt  test_grape_reference.py  test_reference.py
src/: evolve.c  expm.c  expm.h  lindblad.c  lindblad.h  propagate.c  propagate.h
tests/: run_tests.sh  test_batch.c  test_cuda.c  test_evolve.c  test_expm.c  test_grape_build.c  test_propagate.c
